--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,11 @@
   <title>Todo_List_App</title>
 </head>
 <body>
-  <div class="main-container">
-    <div class="content mt-5">
+  <div class="main-container flex-center-column">
+    <div class="content">
       <div class="title-content">
         <p class="fs-5 mb-0">Todoy's To Do</p>
-        <img src="./images/Refresh_icon.png" alt="Refresh icon">
+        <img src="./images/Refresh-icon.png" class="refrsh-img" alt="Refresh icon">
       </div>
       <form class="form my-0 d-flex justify-content-center align-items-center position-relative">
         <input type="text" class="p-2 .add-task-input w-100 form-control shadow-none" placeholder="Add to your list">
