--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,12 @@
   <div class="main-container flex-center-column">
     <div class="content">
       <div class="title-content">
-        <p class="fs-5 mb-0">Todoy's To Do</p>
-        <img src="./images/Refresh-icon.png" class="refrsh-img" alt="Refresh icon">
+        <p>Todoy's To Do</p>
+        <img src="./images/Refresh-icon.png" class="refrsh-img clickable" alt="Refresh icon">
       </div>
-      <form class="form my-0 d-flex justify-content-center align-items-center position-relative">
-        <input type="text" class="p-2 .add-task-input w-100 form-control shadow-none" placeholder="Add to your list">
-        <span class="return-icon text-secondary">&#x23CE;</span>
+      <form class="form">
+        <input type="text" class="add-task-input" placeholder="Add to your list">
+        <span class="return-icon clickable">&#x23CE;</span>
         <ul class="list"></ul>
         <button type="submit" id="clear-all-btn" class="shadow-none py-2">Clear All Completed</button>
        </form>
