--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,11 @@
         <p>Todoy's To Do</p>
         <img src="./images/Refresh-icon.png" class="refrsh-img clickable" alt="Refresh icon">
       </div>
-      <form class="form">
+      <form class="form flex-center-column clickable">
         <input type="text" class="add-task-input" placeholder="Add to your list">
         <span class="return-icon clickable">&#x23CE;</span>
         <ul class="list"></ul>
-        <button type="submit" id="clear-all-btn" class="shadow-none py-2">Clear All Completed</button>
+        <button type="submit" id="clear-all-btn">Clear All Completed</button>
        </form>
     </div>`
   </div>
