--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
       </div>
       <form class="form flex-center-column">
         <input type="text" class="add-task-input" placeholder="Add to your list">
-        <span class="return-icon clickable">&#x23CE;</span>
+        <img src="./images/plus-circle-icon.jpg" class="plus-circle-icon clickable" alt="Plus circle">
         <ul class="list"></ul>
         <button type="submit" id="clear-all-btn" class="clickable">Clear All Completed</button>
        </form>
