--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
       <div class="container flex-center">
         <form id="add-task" class="flex-center" action="/">
           <input id="add-task-input" type="text" placeholder="Add to your list" />
-          <button><i class="fa fa-level-down-alt"></i></button>
+          <button><i class="fa fa-plus-circle"></i></button>
         </form>
       </div>
       <ul class="task-list-container">
