--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 			integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
 			crossorigin="anonymous"
 		/>
-  <title>Todo_List_App</title>
+  <title>Todo List</title>
 </head>
 <body>
   <div id="tasks" class="flex-center">
