--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,8 @@
 			integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
 			crossorigin="anonymous"
 		/>
-  <title>Todo List</title>
+  <title>Todo 
+    List</title>
 </head>
 <body>
   <div id="tasks" class="flex-center">
@@ -21,9 +22,9 @@
         <span class="reload"><i class="fas fa-sync-alt"></i></span>
       </div>
       <div class="container flex-center">
-        <form id="add-task" class="flex-center" action="/">
+        <form id="add-task" class="flex-center" action="https://tresorsawasawa.github.io/Todo_List_App/">
           <input id="add-task-input" type="text" placeholder="Add to your list" />
-          <button><i class="fa fa-plus-circle"></i></button>
+          <button type="submit"><i class="fa fa-plus-circle"></i></button>
         </form>
       </div>
       <ul class="task-list-container">
