Update src/index.html file >> Change the form action

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
         <span class="reload"><i class="fas fa-sync-alt"></i></span>
       </div>
       <div class="container flex-center">
-        <form id="add-task" class="flex-center" action="https://tresorsawasawa.github.io/Todo_List_App/">
+        <form id="add-task" class="flex-center">
           <input id="add-task-input" type="text" placeholder="Add to your list" />
           <button type="submit"><i class="fa fa-plus-circle"></i></button>
         </form>
