--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
       <div class="container flex-center">
         <form id="add-task" class="flex-center">
           <input id="add-task-input" type="text" placeholder="Add to your list" />
-          <button type="submit"><i class="fa fa-plus-circle"></i></button>
+          <button type="submit" aria-label="Add new task"><i class="fa fa-plus-circle"></i></button>
         </form>
       </div>
       <ul class="task-list-container">
