Correct a typo error

--- a/src/index.html
+++ b/src/index.html
@@ -27,8 +27,7 @@
           <button type="submit" aria-label="Add new task"><i class="fa fa-plus-circle"></i></button>
         </form>
       </div>
-      <ul class="task-list-container">
-      </ul>
+      <ul class="task-list-container"></ul>
       <button class="container btn clear-task" type="button">Clear all completed</button>
     </div>
   </div>
